[package]
name = "dictate"
version = "0.9.0"
edition = "2021"
authors = ["Amirabbas Fazelinia <utilyre@proton.me>"]
license = "MIT"
description = "CLI utility for looking up words in online dictionary "
repository = "https://github.com/utilyre/dictate"
build = true

[dependencies]
directories = "5.0.1"

[dependencies.atty]
version = "0.2"

[dependencies.clap]
version = "4.1"
features = ["derive"]

[dependencies.colored]
version = "2.0"

[dependencies.minus]
version = "5.1"
features = ["search", "static_output"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.textwrap]
version = "0.16"
features = ["terminal_size"]

[dependencies.tokio]
version = "1.25"
features = ["full"]

[build-dependencies.clap]
version = "4.1"
features = ["derive"]

[build-dependencies.clap_complete]
version = "4.1"
