[package]
name = "dictate"
version = "0.9.0"
edition = "2021"
authors = ["Amirabbas Fazelinia <utilyre@proton.me>"]
license = "MIT"
description = "CLI utility for looking up words in online dictionary"
repository = "https://github.com/utilyre/dictate"
build = true

[dependencies]
atty = "0.2"
clap = { version = "4.1", features = ["derive"] }
colored = "2.0"
directories = "5.0.1"
minus = { version = "5.1", features = ["search", "static_output"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
textwrap = { version = "0.16", features = ["terminal_size"] }
tokio = { version = "1.25", features = ["full"] }

[build-dependencies]
clap = { version = "4.1", features = ["derive"] }
clap_complete = "4.1"
